Adjusts "customizingResolution-ivyMetadataRule" sample for configuration cache
Signed-off-by: prasad-333 <37048768+prasad-333@users.noreply.github.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-ivyMetadataRule/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-ivyMetadataRule/groovy/build.gradle
@@ -57,8 +57,9 @@ dependencies {
 }
 
 tasks.register("compileClasspathArtifacts") {
+    FileCollection compileClasspath = configurations["compileClasspath"]
     doLast {
-        configurations["compileClasspath"].forEach { println(it.name) }
+        compileClasspath.forEach { println(it.name) }
     }
 }
 tasks.register("runtimeClasspathArtifacts") {
