cch22-7 fix deps issue
Signed-off-by: p1729 <pankajkumar1729@gmail.com>
Helped-by: h0tk3y <hotkeytlt@gmail.com>
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-classifierSubstitutionRule/groovy/consumer/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-classifierSubstitutionRule/groovy/consumer/build.gradle
@@ -20,7 +20,7 @@ configurations.all {
 
 tasks.register('resolve') {
     FileCollection classpath = configurations.runtimeClasspath
-    //inputs.files(classpath)
+    inputs.files(classpath)
     doLast {
         println classpath.files.name
     }
