--- a/subprojects/docs/build.gradle
+++ b/subprojects/docs/build.gradle
@@ -855,6 +855,16 @@ tasks.named("docsTest") { task ->
                     excludeTestsMatching testMask
                 }
             }
+
+            // filter tests which won't run on Groovy 4 without updating the Spock version
+            if (System.getProperty('bundleGroovy4', 'false') == 'true') {
+                excludeTestsMatching 'org.gradle.docs.samples.*.convention-plugins*check.sample'
+                excludeTestsMatching 'org.gradle.docs.samples.*.convention-plugins*sanityCheck.sample'
+                excludeTestsMatching 'org.gradle.docs.samples.*.incubating-publishing-convention-plugins*publish.sample'
+                excludeTestsMatching 'org.gradle.docs.samples.*.publishing-convention-plugins*publish.sample'
+                excludeTestsMatching 'org.gradle.docs.samples.*.snippet-configuration-cache-test-kit*configurationCacheTestKit.sample'
+                excludeTestsMatching 'org.gradle.docs.samples.*.snippet-developing-plugins-testing-plugins*testPlugin.sample'
+            }
         }
     }
 }
