--- a/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
+++ b/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
@@ -6,7 +6,7 @@ apply plugin: AdoptiumPlugin
 
 // tag::toolchain-management[]
 toolchainManagement {
-    jdks { // <1>
+    jvm { // <1>
         resolvers {
             resolver('azul') { // <2>
                 implementationClass = AzulRepo
