Make plugin standalone again

--- a/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
+++ b/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
@@ -54,7 +54,7 @@ abstract class DummyPlugin implements Plugin<Settings> {
     }
 
     void apply(Settings settings) {
-        settings.getPlugins().apply("jvm-toolchains");
+        settings.getPlugins().apply("jvm-toolchain-management");
 
         JavaToolchainRepositoryRegistry registry = getToolchainRepositoryRegistry();
         registry.register(repositoryClass)
