--- a/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-ivyMetadataRule/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-ivyMetadataRule/groovy/build.gradle
@@ -63,7 +63,8 @@ tasks.register("compileClasspathArtifacts") {
     }
 }
 tasks.register("runtimeClasspathArtifacts") {
+    FileCollection runtimeClasspath = configurations["runtimeClasspath"]
     doLast {
-        configurations["runtimeClasspath"].forEach { println(it.name) }
+        runtimeClasspath.forEach { println(it.name) }
     }
 }
