--- a/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
+++ b/subprojects/docs/src/snippets/java/toolchain-management/groovy/settings.gradle
@@ -63,14 +63,14 @@ abstract class DummyPlugin implements Plugin<Settings> {
 
 abstract class AzulResolver implements JavaToolchainResolver {
     @Override
-    Optional<URI> toUri(JavaToolchainRequest request) {
+    Optional<URI> resolve(JavaToolchainRequest request) {
         return Optional.empty();
     }
 }
 
 abstract class AdoptiumResolver implements JavaToolchainResolver {
     @Override
-    Optional<URI> toUri(JavaToolchainRequest request) {
+    Optional<URI> resolve(JavaToolchainRequest request) {
         return Optional.empty();
     }
 }
