--- a/gradle/dependency-management/agp-versions.properties
+++ b/gradle/dependency-management/agp-versions.properties
@@ -1,2 +1,2 @@
 # Generated - Update by running `./gradlew updateAgpVersions`
-latests=7.3.0-rc01,7.4.0-alpha10
+latests=7.3.0,7.4.0-beta01,8.0.0-alpha01
