Adjust expected output to be CC-insensitive
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-metadataRule/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/dependencyManagement/customizingResolution-metadataRule/groovy/build.gradle
@@ -298,16 +298,17 @@ tasks.register("compileClasspathArtifacts") {
     }
 }
 tasks.register("failRuntimeClasspathResolve") {
+    FileCollection runtimeClasspath = configurations["runtimeClasspath"]
     doLast {
-        configurations["runtimeClasspath"].each { println(it.name) }
+        runtimeClasspath.each { println(it.name) }
     }
 }
 tasks.register("runtimeClasspathArtifacts") {
     FileCollection runtimeClasspath = configurations["runtimeClasspath"]
+    configurations["runtimeClasspath"].attributes {
+        attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, "x86"))
+    }
     doLast {
-        runtimeClasspath.attributes {
-            attribute(MachineArchitecture.ARCHITECTURE_ATTRIBUTE, objects.named(MachineArchitecture, "x86"))
-        }
         runtimeClasspath.findAll { !it.name.startsWith("commons-lang3") }.each { println(it.name) }
     }
 }
