Incorporate changes from PR #22174
Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/snippets/testKit/testKitFunctionalTestSpockBuildCache/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/testKit/testKitFunctionalTestSpockBuildCache/groovy/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 dependencies {
-    testImplementation('org.spockframework:spock-core:2.2-groovy-4.0') {
-        exclude group: 'org.apache.groovy'
+    testImplementation('org.spockframework:spock-core:2.2-groovy-3.0') {
+        exclude group: 'org.codehaus.groovy'
     }
 }
 
