--- a/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
+++ b/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+
+import gradlebuild.EnrichedReportRenderer
 import gradlebuild.basics.PublicApi
 import gradlebuild.basics.PublicKotlinDslApi
 import gradlebuild.basics.GradleModuleApiAttribute
@@ -149,9 +151,11 @@ def checkBinaryCompatibility = tasks.register("checkBinaryCompatibility", Japicm
             We check the binary compatibility by comparing the current code’s binary interfaces
             against THE LATEST VERSION WHICH IS RELEASED FROM RELEASE BRANCH (from `released-version.json` on this branch)
             AND LOWER THAN CURRENT BASE VERSION (from `version.txt` on this branch).
-            The difference must identically match `accepted-public-api-changes.json`, no more, no less - otherwise the task will fail.
+            The difference must identically match <a href="${apiChangesJsonFile.asFile.path}">accepted-public-api-changes.json</a>, no more, no less - otherwise the task will fail.
             </p>
 """.stripIndent()
+
+        it.renderer.set(EnrichedReportRenderer.class)
     } as Action)
 
     BinaryCompatibilityHelper.setupJApiCmpRichReportRules(delegate, acceptedViolations, apiSourceFolders, baseVersion.get())
