--- a/released-versions.json
+++ b/released-versions.json
@@ -9,6 +9,10 @@
   },
   "finalReleases": [
     {
+      "version": "6.9.2",
+      "buildTime": "20211221201838+0000"
+    },
+    {
       "version": "6.9.1",
       "buildTime": "20210820111518+0000"
     },
