Adjust how we pass arguments down to root gradle violation rule - keep them in the map until the base class
Required some test adjustments, but avoids casts in every subtype.

--- a/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
+++ b/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
@@ -158,7 +158,7 @@ def checkBinaryCompatibility = tasks.register("checkBinaryCompatibility", Japicm
         it.renderer.set(EnrichedReportRenderer.class)
     } as Action)
 
-    BinaryCompatibilityHelper.setupJApiCmpRichReportRules(delegate, acceptedViolations, apiSourceFolders, baseVersion.get(), apiChangesJsonFile, rootProject.layout.projectDirectory)
+    BinaryCompatibilityHelper.setupJApiCmpRichReportRules(delegate, acceptedViolations, apiSourceFolders, baseVersion.get(), apiChangesJsonFile.asFile, rootProject.layout.projectDirectory)
 }
 tasks.named("check").configure { dependsOn(checkBinaryCompatibility) }
 
