Fix CC compatibility of some snippets in files/misc
Also improve test coverage for this case.

--- a/subprojects/docs/src/snippets/files/misc/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/files/misc/groovy/build.gradle
@@ -8,9 +8,12 @@ tasks.register('ensureDirectory') {
 
 // tag::move-example[]
 tasks.register('moveReports') {
+    // Store the build directory into a variable to avoid project reference in the configuration cache
+    def dir = buildDir
+
     doLast {
-        ant.move file: "${buildDir}/reports",
-                 todir: "${buildDir}/toArchive"
+        ant.move file: "${dir}/reports",
+                 todir: "${dir}/toArchive"
     }
 }
 // end::move-example[]
