--- a/subprojects/performance/src/templates/project-with-source/pom.xml
+++ b/subprojects/performance/src/templates/project-with-source/pom.xml
@@ -20,9 +20,9 @@
             <version>2.5</version>
         </dependency>
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.0</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.14</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
