[infra] Compare EAP branch to latest release

--- a/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
+++ b/build-logic/binary-compatibility/src/main/groovy/gradlebuild.binary-compatibility.gradle
@@ -179,7 +179,8 @@ def checkBinaryCompatibility = tasks.register("checkBinaryCompatibility", gradle
         mainApiChangesJsonFile.asFile,
         project.isolated.rootProject.projectDirectory,
         currentUpgradedPropertiesFile.get().asFile,
-        baselineUpgradedPropertiesFile.get().asFile
+        baselineUpgradedPropertiesFile.get().asFile,
+        compatibilityBaselineVersion
     )
 }
 tasks.named("check").configure { dependsOn(checkBinaryCompatibility) }
