--- a/build-logic/performance-testing/src/main/resources/mirroring-init-script.gradle
+++ b/build-logic/performance-testing/src/main/resources/mirroring-init-script.gradle
@@ -61,20 +61,16 @@ class MirrorPlugin implements Plugin<Gradle> {
 
     void withMirrors(RepositoryHandler repos) {
         repos.all { repo ->
-            if (repo instanceof MavenArtifactRepository) {
-                mirror(repo)
-            } else if (repo instanceof IvyArtifactRepository) {
+            if (repo instanceof UrlArtifactRepository) {
                 mirror(repo)
             }
         }
     }
 
-    void mirror(MavenArtifactRepository repo) {
-        repo.url = mirrors.get(normalizeUrl(repo.url), repo.url.toString())
-    }
-
-    void mirror(IvyArtifactRepository repo) {
-        repo.url = mirrors.get(normalizeUrl(repo.url), repo.url.toString())
+    void mirror(UrlArtifactRepository repo) {
+        // TODO: Remove after Gradle 9.0
+        def oldUrl = repo.url instanceof Property ? (repo.url as Property<URI>).get() : repo.url
+        repo.url = mirrors.get(normalizeUrl(oldUrl), oldUrl.toString())
     }
 
     // We see them as equal:
