--- a/platforms/documentation/docs/src/snippets/dependencyManagement/customizingResolution-selectionRule/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/dependencyManagement/customizingResolution-selectionRule/groovy/build.gradle
@@ -56,7 +56,7 @@ tasks.register('printRejectConfig') {
 
 // tag::component-selection-with-metadata[]
 configurations {
-    metadataRulesConfig {
+    register("metadataRulesConfig") {
         resolutionStrategy {
             componentSelection {
                 // Reject any versions with a status of 'experimental'
