--- a/platforms/documentation/docs/src/snippets/workerApi/md5ProcessIsolation/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/workerApi/md5ProcessIsolation/groovy/build.gradle
@@ -4,7 +4,7 @@ repositories {
     mavenCentral()
 }
 
-configurations.create('codec') {
+configurations.register('codec') {
     attributes {
         attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
     }
