Implement += support for collection Properties in Groovy build scripts
This only supports `+=` and not `+`. Unlike Kotlin, this is much more
involved because of the Groovy overloading restrictions. Groovy only
supports overloading of +, and uses it to implement +=, by basically
rewriting `a += b` into `a = a + b`. This doesn't play well with
Properties, because a sensible implementation of plus operator (e.g.
`a.zip(b) { l1, l2 -> l1 + l2 }`) will likely cause a self-referencing
chain to happen. While this can also be solved upon assignment, we don't
really want users to have "action-at-distance" when you can set
`c = a + b`, and, a thousand lines after, happily assign `a = c` and
get some strange results. The latter should cause circular evaluation
failure.

In order to support `+=`, and not arbitrary self-referencing `+`
expressions, we employ an AST transformation. The transformation allows
properties to provide a stand-in, which will be concatenated with the
right-hand operand.

This works for fields of Property types, where setting the property
value to the stand-in simply invokes appropriate mutation operation,
like `add` or `addAll`. This also works for variable, where the stand-in
becomes the new value of the property. The stand-in acts as a `zip`-ped
provider.

Again, unlike Kotlin, the += is an expression in Groovy. To make both
DSLs consistent, the value of += expression involving Properties is
`null`. While it is still possible to write `foo = (a += b)` in Groovy,
it is now rather pointless thing to do. All my attempts to give this
expression some sensible value (e.g. return lhs operand or a shallow
copy) faced different complicated corner cases.

Implementation for ConfigurableFileCollection mostly follows the
implementation in the collection properties. One difference is that the
value of `+=` expression is already set in Groovy, at least when
variables are involved. Therefore, we cannot simply replace it to null
without breaking compatibility.

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -602,6 +602,13 @@
     "crossVersionTests": false
   },
   {
+    "name": "groovy-support",
+    "path": "platforms/core-configuration/groovy-support",
+    "unitTests": true,
+    "functionalTests": false,
+    "crossVersionTests": false
+  },
+  {
     "name": "guava-serialization-codecs",
     "path": "platforms/core-configuration/guava-serialization-codecs",
     "unitTests": false,
