--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -8,6 +8,7 @@
         <junit.version>5.11.3</junit.version>
         <jackson.version>2.18.2</jackson.version>
         <dslContextParameter.branch>master</dslContextParameter.branch>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <groupId>Gradle_Check</groupId>
     <artifactId>Gradle_Check_dsl</artifactId>
