--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -1267,6 +1267,20 @@
     "crossVersionTests": false
   },
   {
+    "name": "software-features",
+    "path": "platforms/core-configuration/software-features",
+    "unitTests": true,
+    "functionalTests": true,
+    "crossVersionTests": false
+  },
+  {
+    "name": "software-features-api",
+    "path": "platforms/core-configuration/software-features-api",
+    "unitTests": false,
+    "functionalTests": false,
+    "crossVersionTests": false
+  },
+  {
     "name": "stdlib-java-extensions",
     "path": "platforms/core-runtime/stdlib-java-extensions",
     "unitTests": true,
