--- a/platforms/ide/ide-plugins/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
+++ b/platforms/ide/ide-plugins/src/integTest/resources/org/gradle/plugins/ide/idea/IdeaIntegrationTest/canCreateAndDeleteMetaData/webservice/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'war'
 version = '2.5'
 
 dependencies {
-    providedCompile 'org.slf4j:slf4j-api:1.5.8@jar'
+    providedCompile 'org.slf4j:slf4j-api:2.0.17jar'
     api project(':api'), files("$projectDir/lib/compile-1.0.jar")
     runtimeOnly "commons-lang:commons-lang:2.4"
     runtimeOnly "commons-io:commons-io:1.2"
