Add demo plugins

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -1309,6 +1309,13 @@
     "crossVersionTests": false
   },
   {
+    "name": "software-features-demos",
+    "path": "platforms/core-configuration/software-features-demos",
+    "unitTests": false,
+    "functionalTests": false,
+    "crossVersionTests": false
+  },
+  {
     "name": "stdlib-java-extensions",
     "path": "platforms/core-runtime/stdlib-java-extensions",
     "unitTests": true,
