--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually/groovy/build.gradle
@@ -2,23 +2,67 @@ plugins {
     id 'java-library'
 }
 
-// tag::resolve-call[]
-def resolvedClasspath = configurations.runtimeClasspath.resolve() // <1>
-logger.lifecycle(resolvedClasspath.join(", "))
-// end::resolve-call[]
+// tag::bad-classpath-printer[]
+dependencies {
+    runtimeOnly project(":library") // <1>
+}
 
-// tag::good-classpath-printer[]
-abstract class ClasspathPrinter extends DefaultTask {
+class BadClasspathPrinter extends DefaultTask {
     @InputFiles
-    abstract ConfigurableFileCollection getResolvedClasspath()
+    Set<File> classpath = [] as Set // <2>
+
+    private int calculateDigest(File fileOrDirectory) {
+        if (!fileOrDirectory.exists()) {
+            throw new IllegalArgumentException("File or directory $fileOrDirectory doesn't exist")
+        }
+        return 0 // actual implementation is stripped
+    }
 
     @TaskAction
     void run() {
-        logger.lifecycle(resolvedClasspath.files.join(", ")) // <2>
+        logger.lifecycle(
+            classpath.collect { file ->
+                def digest = calculateDigest(file) // <4>
+                "$file#$digest"
+            }.join("\n")
+        )
     }
 }
 
-tasks.register("classpathPrinter", ClasspathPrinter) {
-    it.resolvedClasspath.from(configurations.runtimeClasspath) // <1>
+tasks.register("badClasspathPrinter", BadClasspathPrinter) {
+    classpath = configurations.runtimeClasspath.get().resolve() // <3>
+}
+// end::bad-classpath-printer[]
+
+// tag::good-classpath-printer[]
+dependencies {
+    runtimeOnly project(":library") // <1>
+}
+
+class GoodClasspathPrinter extends DefaultTask {
+
+    @InputFiles
+    abstract ConfigurableFileCollection getResolvedClasspath() // <2>
+
+    private int calculateDigest(File fileOrDirectory) {
+        if (!fileOrDirectory.exists()) {
+            throw new IllegalArgumentException("File or directory $fileOrDirectory doesn't exist")
+        }
+        return 0 // actual implementation is stripped
+    }
+
+    @TaskAction
+    void run() {
+        logger.lifecycle(
+            resolvedClasspath.collect { file ->
+                def digest = calculateDigest(file) // <4>
+                "$file#$digest"
+            }.join("\n")
+        )
+    }
+}
+
+tasks.register("goodClasspathPrinter", GoodClasspathPrinter) {
+    resolvedClasspath.from(configurations.runtimeClasspath) // <3>
 }
 // end::good-classpath-printer[]
