Use multiple from() instead explicit file collection creation for "avoidJdkCollectionApi" snippet
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidJdkCollectionApiOnFileCollections/groovy/build.gradle
@@ -11,7 +11,7 @@ tasks.register("badZippingTask", Zip) {
 
 // tag::good-zipping-task[]
 tasks.register("goodZippingTask", Zip) {
-    def files = files(configurations.runtimeClasspath, layout.projectDirectory.file("extra.txt")) // <1>
-    from(files)
+    from(configurations.runtimeClasspath) // <1>
+    from(layout.projectDirectory.file("extra.txt"))
 }
 // end::good-zipping-task[]
