--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually/tests/avoidResolvingConfigurationsManually.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidResolvingConfigurationsManually/tests/avoidResolvingConfigurationsManually.sample.conf
@@ -2,6 +2,9 @@ commands: [{
     executable: gradle
     args: badClasspathPrinter
     expected-output-file: avoidResolvingConfigurationsManually.bad.out
+    expect-failure: true
+    allow-additional-output: true
+    allow-disordered-output: true
 }, {
     executable: gradle
     args: goodClasspathPrinter
