Split avoidDependenciesDuplocate bestpractice snippet into two "do-this" and "avoid-this" subprojects
Signed-off-by: Anton Lakotka <antoha.by@gmail.com>

--- a/platforms/documentation/docs/src/snippets/bestPractices/avoidDuplicateDependencies/tests/avoidDuplicateDependencies.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/avoidDuplicateDependencies/tests/avoidDuplicateDependencies.sample.conf
@@ -1,5 +1,9 @@
 commands: [{
     executable: gradle
-    args: ":dummyTask"
-    expected-output-file: avoidDuplicateDependencies.out
+    args: ":do-this:dependencies"
+    expected-output-file: avoidDuplicateDependencies.do.out
+}, {
+    executable: gradle
+    args: ":avoid-this:dependencies"
+    expected-output-file: avoidDuplicateDependencies.avoid.out
 }]
