Make components/model reporting plugins internal

--- a/platforms/core-configuration/base-diagnostics/src/main/resources/META-INF/gradle-plugins/org.gradle.model-reporting-tasks.properties
+++ b/platforms/core-configuration/base-diagnostics/src/main/resources/META-INF/gradle-plugins/org.gradle.model-reporting-tasks.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=org.gradle.api.plugins.ModelReportingTasksPlugin
+implementation-class=org.gradle.api.plugins.internal.ModelReportingTasksPlugin
