--- a/platforms/software/software-diagnostics/src/main/resources/META-INF/gradle-plugins/org.gradle.component-reporting-tasks.properties
+++ b/platforms/software/software-diagnostics/src/main/resources/META-INF/gradle-plugins/org.gradle.component-reporting-tasks.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=org.gradle.api.plugins.ComponentReportingTasksPlugin
+implementation-class=org.gradle.api.plugins.internal.ComponentReportingTasksPlugin
