--- a/platforms/documentation/docs/src/snippets/buildCache/reproducible-archives/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/buildCache/reproducible-archives/groovy/build.gradle
@@ -1,5 +1,7 @@
 tasks.register('createZip', Zip) {
     preserveFileTimestamps = false
     reproducibleFileOrder = true
+    dirPermissions { unix("755") }
+    filePermissions { unix("644") }
     // ...
 }
