--- a/platforms/documentation/docs/src/snippets/buildCache/caching-android-projects/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/buildCache/caching-android-projects/groovy/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id("org.jetbrains.kotlin.jvm") version "2.1.21-RC"
-    id("org.jetbrains.kotlin.kapt") version "2.1.21-RC"
+    id("org.jetbrains.kotlin.jvm") version "2.1.21-RC2"
+    id("org.jetbrains.kotlin.kapt") version "2.1.21-RC2"
 }
 
 // tag::cacheKapt[]
