Trigger issue metadata on reopening
Signed-off-by: Vlad Chesnokov <vchesnokov@gradle.com>

--- a/.github/workflows/issue-metadata.yml
+++ b/.github/workflows/issue-metadata.yml
@@ -2,7 +2,7 @@ name: Check issues metadata
 
 on:
   issues:
-    types: [ opened, unlabeled, closed ]
+    types: [ opened, unlabeled, closed, reopened ]
 
 permissions: {}
 
