Add model reporting plugin to snippet

--- a/platforms/documentation/docs/src/snippets/modelRules/basicRuleSourcePlugin/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/modelRules/basicRuleSourcePlugin/groovy/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'model-reporting-tasks'
+    id 'component-reporting-tasks'
+}
 // tag::managed-type-plugin-and-dsl[]
 // tag::managed-type-and-plugin[]
 // tag::managed-type[]
