Update use composite builds for build-logic example from feedback

--- a/platforms/documentation/docs/src/snippets/bestPractices/favorCompositeBuilds-do/groovy/settings.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/favorCompositeBuilds-do/groovy/settings.gradle
@@ -1,7 +1,5 @@
 // tag::do-this[]
-pluginManagement {
-    includeBuild("build-logic")
-}
+includeBuild("build-logic") // <1>
 
 rootProject.name = "favor-composite-builds"
 // end::do-this[]
