--- a/platforms/documentation/docs/src/snippets/bestPractices/favorCompositeBuilds-do/groovy/build-logic/plugin/build.gradle
+++ b/platforms/documentation/docs/src/snippets/bestPractices/favorCompositeBuilds-do/groovy/build-logic/plugin/build.gradle
@@ -1,8 +1,8 @@
 // tag::do-this[]
-// This file is located in /build-logic
+// This file is located in /build-logic/plugin
 
 plugins {
-    `java-gradle-plugin`
+    id "java-gradle-plugin"
 }
 
 gradlePlugin {
