Change example to something that works reliably

--- a/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-do/tests/useTheGradlePropertiesFile-do.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-do/tests/useTheGradlePropertiesFile-do.sample.conf
@@ -1,14 +1,6 @@
-commands: [{
-    executable: gradle
-    args: build
-    expected-output-file: useTheGradlePropertiesFile-do-1.out
-    allow-additional-output: true
-}, {
-    executable: gradle
-    args: clean
-}, {
-     executable: gradle
-     args: build
-     expected-output-file: useTheGradlePropertiesFile-do-2.out
-     allow-additional-output: true
-}]
+executable: gradle
+args: run
+expect-failure: true
+expected-output-file: useTheGradlePropertiesFile-do.out
+allow-additional-output: true
+allow-disordered-output: true
