--- a/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-avoid/tests/useTheGradlePropertiesFile-avoid.sample.conf
+++ b/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-avoid/tests/useTheGradlePropertiesFile-avoid.sample.conf
@@ -1,11 +1,6 @@
-commands: [{
-    executable: gradle
-    args: "build --rerun-tasks"
-    expected-output-file: useTheGradlePropertiesFile-avoid-1.out
-    allow-additional-output: true
-}, {
-     executable: gradle
-     args: "build --rerun-tasks -Dorg.gradle.caching=true -Dorg.gradle.projectcachedir=cache -Dorg.gradle.configureondemand=true"
-     expected-output-file: useTheGradlePropertiesFile-avoid-2.out
-     allow-additional-output: true
-}]
+executable: gradle
+args: "run -Dorg.gradle.continue=true"
+expect-failure: true
+expected-output-file: useTheGradlePropertiesFile-avoid.out
+allow-additional-output: true
+allow-disordered-output: true
