--- a/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-do/kotlin/gradle.properties
+++ b/platforms/documentation/docs/src/snippets/bestPractices/useTheGradlePropertiesFile-do/kotlin/gradle.properties
@@ -1,4 +1,3 @@
-# tag::do-this[]
-org.gradle.caching=true
-org.gradle.configureondemand=true
-# end::do-this[]
+# // tag::do-this[]
+org.gradle.continue=true
+# // end::do-this[]
