--- a/released-versions.json
+++ b/released-versions.json
@@ -9,6 +9,10 @@
   },
   "finalReleases": [
     {
+      "version": "7.6.4",
+      "buildTime": "20240205142918+0000"
+    },
+    {
       "version": "7.6.3",
       "buildTime": "20231004155947+0000"
     },
